[tool.poetry]
name = "pettingzoo-docker"
version = "0.1.0"
description = ""
authors = ["SithHades <l.knaack93@gmail.com>"]
readme = "README.md"
packages = [{include = "pettingzoo_docker"}]

[tool.poetry.dependencies]
python = "~3.10.11"
pettingzoo = {extras = ["butterfly"], version = "^1.23.1"}
flask = "^2.3.2"
requests = "^2.31.0"
jsonpickle = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
